{
    "version": 1,
    "name": "playerInput",
    "maps": [
        {
            "name": "characterController",
            "id": "81d82648-e0c5-41e2-8b70-62eb6623dfac",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "770ae972-424b-47c2-8ed8-9e680b259394",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "d173f06f-6394-4a3a-87d4-98ae96c2a0da",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fac5151f-0368-4ede-bd85-b1eba1a3d36b",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f8e2b819-8e36-4dc6-bb21-47ae2eceb6b5",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}